# Module_python08

PythonModule8/ex0/: construct.py
PythonModule8/ex1/: loading.py  pyproject.toml
PythonModule8/ex2/: oracle.py
ex0/: construct.py
ex1/: loading.py  pyproject.toml
ex2/: oracle.py
